service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The application's HTTP/AJP ports
  labels:
    app: testapp1
  name: testapp1
spec:
  ports:
  - name: 8009-tcp
    port: 8009
    protocol: TCP
    targetPort: 8009
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  - name: 443-tcp
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: testapp1
    deploymentconfig: testapp1
  sessionAffinity: None
  type: ClusterIP
