route.yaml
apiVersion: route.openshift.io/v1

kind: Route

metadata:

  annotations:

    description: Configuration of the external route for the application.

  labels:

    app: testapp1

  name: testapp1

spec:

  host: testapp1.commerzbank.com

  port:

    targetPort: 80-tcp

  to:

    kind: Service

    name: testapp1

    weight: 100

  wildcardPolicy: None
